add_library("imgui" 
    "imconfig.h" 
    "imgui_draw.cpp" 
    "imgui_internal.h"
    "imgui_tables.cpp" 
    "imgui_widgets"
    "imgui.cpp" 
    "imgui.h"
    "imstb_rectpack.h"
    "imstb_textedit.h"
    "imstb_truetype.h"
)

set_target_properties("imgui" PROPERTIES LINKER_LANGUAGE CXX)

target_include_directories("imgui" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")